add JVM_OPT and JAVA_OPT