@@ -43,4 +43,19 @@ if [ -n "${PULSAR_JAR_VERSION}" ] && [ -n "${MAVEN_ADDRESS}" ]; then
   wget -P /opt/sh/lib "${MAVEN_ADDRESS}"/org/apache/pulsar/pulsar-transaction-common/"${PULSAR_JAR_VERSION}"/pulsar-transaction-common-"${PULSAR_JAR_VERSION}".jar
 fi
 
-java -Xmx1G -Xms1G -XX:MaxDirectMemorySize=2G -classpath /opt/sh/lib/*:/opt/sh/paas-proxy.jar:/opt/sh/conf/*  com.github.shoothzj.paas.proxy.Main >>/opt/sh/logs/stdout.log 2>>/opt/sh/logs/stderr.log
+# memory option
+if [ ! -n "$HEAP_MEM" ]; then
+  HEAP_MEM="1G"
+fi
+if [ ! -n "$DIR_MEM" ]; then
+  DIR_MEM="1G"
+fi
+# mem option
+JVM_OPT="-Xmx${HEAP_MEM} -Xms${HEAP_MEM} -XX:MaxDirectMemorySize=${DIR_MEM}"
+# gc option
+JVM_OPT="${JVM_OPT} -XX:+UseG1GC -XX:MaxGCPauseMillis=10 -XX:+ParallelRefProcEnabled -XX:+UnlockExperimentalVMOptions"
+JVM_OPT="${JVM_OPT} -XX:+DoEscapeAnalysis -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4"
+# gc log option
+JVM_OPT="${JVM_OPT} -Xlog:gc*=info,gc+phases=debug:/opt/sh/logs/gc.log:time,uptime:filecount=10,filesize=100M"
+
+java $JAVA_OPT $JVM_OPT -classpath /opt/sh/lib/*:/opt/sh/paas-proxy.jar:/opt/sh/conf/*  com.github.shoothzj.paas.proxy.Main >>/opt/sh/logs/stdout.log 2>>/opt/sh/logs/stderr.log
